# nccl_scope

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  sugar.cmake
cmake/: FindNCCL.cmake  sugar.cmake
docs/: nccl.md  unified_memory_nccl.md
src/: sugar.cmake
src/SingleDevices/: allReduce.cpp
src/SingleProcess/: allGather.cpp  allReduce.cpp  allReduceOrig.cpp  args.hpp  broadcast.cpp  charallReduce.cpp  exallReduce.cpp  reduce.cpp  reduceScatter.cpp  sugar.cmake
src/init/: flags.cpp  flags.hpp  init.cpp  sugar.cmake
